methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:20: error: only classes can have declared but undefined members
  def makeLigne();
      ^